# tergp

./: CMakeLists.txt  README.md  main.c  mdat rules.txt
Sources/: auxFuncs.c
Sources/lists/: listHandling.c
Sources/maps/: fileHandling.c  mapHandling.c
Sources/player/: playerMovement.c
assets/maps/: map1.txt  map1_mdat.txt
headers/: headers.h  lists.h  map.h  player.h
